<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">G1 Quiz</string>

    <!-- Quiz options -->
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>

    <!-- Question placeholder -->
    <string name="question_placeholder">This is a sample question?</string>

    <!-- Image description for accessibility -->
    <string name="question_image_desc">Quiz question image</string>
</resources>
